feat: initial commit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "rocket_jwt_auth"
 version = "0.0.1"
 edition = "2021"
+license = "MIT"
+description = "JWT header authentication for Rocket"
+keywords = ["rocket", "jwt"]
 
 [dependencies]
 rocket = "0.4.7"
